# log-analyzer-ar

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  README_old.md  log_analyzer.py  pyproject.toml
.github/workflows/: ci.yml
log_analyzer_ar/: __init__.py  __main__.py  ai_summary.py  analyzer.py  cli.py  parser.py  reporter.py  reporter_old.py
log_analyzer_ar/templates/: report.html
scripts/: demo.sh
tests/: test_analyzer.py  test_parser.py
