[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "log-analyzer-ar"
version = "1.0.0"
description = "Production-grade Linux log analyzer with Arabic AI summary support"
authors = [{name = "Mealiclay01"}]
readme = "README.md"
requires-python = ">=3.7"
keywords = ["log", "analyzer", "devops", "soc", "arabic", "ai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
ai = ["openai>=1.0.0", "anthropic>=0.18.0"]

[project.scripts]
log-analyzer-ar = "log_analyzer_ar.cli:main"

[project.urls]
Homepage = "https://github.com/Mealiclay01/log-analyzer-ar"
Repository = "https://github.com/Mealiclay01/log-analyzer-ar"
